2014-11-20  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.6.4 release.

        * Source/cmake/OptionsGTK.cmake: Bump version numbers.

2014-11-01  Carlos Garcia Campos  <cgarcia@igalia.com>

        REGRESSION(CMake): Make it possible to build without introspection
        https://bugs.webkit.org/show_bug.cgi?id=138006

        Reviewed by Philippe Normand.

        Add ENABLE_INTROSPECTION option.

        * Source/PlatformGTK.cmake: Dot not add gir global target if
        introspection is disabled.
        * Source/cmake/OptionsGTK.cmake: Do not add gir individual targets if
        introspection is disabled.

2014-11-12  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.6.3 release.

        * Source/cmake/OptionsGTK.cmake: Bump version numbers.

2014-10-29  Raphael Kubo da Costa  <rakuco@FreeBSD.org>

        [GTK] Bump libsoup's minimum version to 2.42.0.
        https://bugs.webkit.org/show_bug.cgi?id=138086

        Reviewed by Martin Robinson.

        The SOUP_CHECK_VERSION macro was added in libsoup 2.41.1, and the
        soup-version.h header was added to soup.h in 2.41.4, which then becomes
        the minimum version required to build the port these days.

        In addition, since the autotools build system required 2.42.0 before
        being retired, require the same version here. Version 2.42.0 was also
        recommended in
        https://lists.webkit.org/pipermail/webkit-gtk/2013-March/001387.html.

        * Source/cmake/OptionsGTK.cmake:

2014-09-26  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Enable CSS_IMAGE_SET in production builds
        https://bugs.webkit.org/show_bug.cgi?id=137142

        Reviewed by Alejandro G. Castro.

        This is required by the inspector to show some of the icons that
        has a HiDPI variant.

        * Source/cmake/OptionsGTK.cmake:
